支持了ES搜索分享信息，支持查询分享列表，支持删除分享，优化了项目架构